<resources>
    <string name="app_name">Dream Compilers</string>

    <string name="disease_symptom_hint">Enter the symptoms here</string>
    <string name="disease_title_textview">disease</string>
    <string name="disease_description_hint">Enter the description here</string>
    <string name="disease_symptoms_title">Symptoms</string>
    <string name="disease_description_title">Description</string>
    <string name="disease_location_title">Location</string>

    <string name="new_disease">New Disease</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_firstname">First name</string>
    <string name="hint_middlename">Middle name</string>
    <string name="hint_lastname">Last name</string>
    <string name="hint_username">Username</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="spinner_register_prompt">District Location</string>

    <string name="role_id_doctor">ROLE_DOCTOR</string>
    <string name="role_id_health_officer">ROLE_HEALTH_OFFICER</string>
    <string name="role_id_app_user">ROLE_APP_USER</string>

    <string name="btn_disease_save">Save</string>

    <string-array name="register_district_entries">
        <!--
        <item>Ampara</item>
        <item>Batticoloa</item>
        <item>Colombo</item>
        <item>Gampaha</item>
        <item>Hambanthota</item>
        <item>Jaffna</item>
        <item>Kaluthura</item>
        <item>Mannar</item>
        <item>Matale</item>
        <item>Matara</item>
        -->

        <item>00100</item>
        <item>00600</item>
        <item>10400</item>
        <item>81000</item>
        <item>89000</item>

    </string-array>

    <string-array name="register_role_entries">
        <item>Patient</item>
        <item>Doctor</item>
        <item>Health Officer</item>


    </string-array>




</resources>
